--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+<div class="loader sk-rotating-plane"></div>
+  </app-root>
 </body>
 </html>
